@@ -1,5 +1,4 @@
 Sometimes avoid allocation in 'c' by expanding space used by 
 first argument.  Does this for both c(v+1,x) and v<-c(v,x).
 
-Also shows reallocs in Rprofmemt output.
-
+Sometimes does copying for 'c' in a helper thread.
